--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "jax==0.4.26",
     "numpy>=1.26.4",
     "pandas>=2.1.4",
+    "utilsforecast",
 ]
 authors = [
      {name = "Rajat Sen", email = "senrajat@google.com"},
